@startuml

abstract class org.rudi.common.storage.entity.AbstractLabelizedEntity <<MappedSuperclass>>  {
	{field} {static} +CODE_COLUMN_LENGTH : int
	{field} {static} +CODE_COLUMN_NAME : String
	{field} +@Column("code") code : String
	{field} +@Column("label") label : String
	{field} {static} -serialVersionUID : long
	{method} +equals ( obj : Object ) : boolean
	{method} +hashCode () : int
	{method} +toString () : String
}


abstract class org.rudi.common.storage.entity.AbstractLongIdEntity <<MappedSuperclass>>  {
	{field} +@Column("id") @Id id : Long
	{field} {static} -serialVersionUID : long
	{field} +@Column("uuid") uuid : java.util.UUID
	{method} +equals ( obj : Object ) : boolean
	{method} +hashCode () : int
	{method} +toString () : String
}


abstract class org.rudi.common.storage.entity.AbstractLongIdEntity$AbstractLongIdEntityBuilder {
	{field} -id : Long
	{field} -uuid : java.util.UUID
	{method}  {abstract} +build () : org.rudi.common.storage.entity.AbstractLongIdEntity
	{method} +id ( id : Long ) : org.rudi.common.storage.entity.AbstractLongIdEntity$AbstractLongIdEntityBuilder
	{method}  {abstract} #self () : org.rudi.common.storage.entity.AbstractLongIdEntity$AbstractLongIdEntityBuilder
	{method} +toString () : String
	{method} +uuid ( uuid : java.util.UUID ) : org.rudi.common.storage.entity.AbstractLongIdEntity$AbstractLongIdEntityBuilder
}


abstract class org.rudi.common.storage.entity.AbstractStampedEntity <<MappedSuperclass>>  {
	{field} +@Column("closing_date") closingDate : java.time.LocalDateTime
	{field} +@Column("opening_date") openingDate : java.time.LocalDateTime
	{field} +@Column("order_") order : int
	{field} {static} -serialVersionUID : long
	{method} +equals ( obj : Object ) : boolean
	{method} +hashCode () : int
	{method} +toString () : String
}


abstract class org.rudi.common.storage.entity.AbstractTranslationEntity <<MappedSuperclass>>  {
	{field} +@Column("lang") lang : String
	{field} {static} -serialVersionUID : long
	{field} +@Column("text") text : String
	{method} +equals ( obj : Object ) : boolean
	{method} +hashCode () : int
	{method} +toString () : String
}


class org.rudi.common.storage.entity.HibernateEntityHelper {
	{method}  {static} +setCollection ( collectionGetter : java.util.function.Supplier , newCollection : java.util.Collection ) : void
}


interface org.rudi.common.storage.entity.PositionedStatus {
	{method}  {abstract} +isFinal () : boolean
	{method}  {abstract} +isInitial () : boolean
}


class org.rudi.common.storage.entity.SkosConceptCodeColumn {
	{field} {static} +LENGTH : int
	{field} {static} +NAME : String
	{field} {static} +TABLE_NAME : String
}


enum org.rudi.common.storage.entity.StatusPosition {
	{field} +FINAL
	{field} +INITIAL
	{field} +INTERMEDIATE
}


class org.rudi.facet.bpmn.entity.form.FormDefinitionEntity <<Entity>>  <<Table>>  {
 {TableName=form_definition}
--
	{field} +@Column("name") name : String
	{field} {static} -serialVersionUID : long
	{method} +addFormSectionDefinition ( formSectionDefinitionEntity : org.rudi.facet.bpmn.entity.form.FormSectionDefinitionEntity ) : void
	{method} +equals ( obj : Object ) : boolean
	{method} +hashCode () : int
	{method} +lookupFormSectionDefinition ( uuid : java.util.UUID ) : org.rudi.facet.bpmn.entity.form.FormSectionDefinitionEntity
	{method} +toString () : String
}


class org.rudi.facet.bpmn.entity.form.FormSectionDefinitionEntity <<Entity>>  <<Table>>  {
 {TableName=form_section_definition}
--
	{field} +@Column("order_") order : int
	{field} +@Column("read_only") readOnly : boolean
	{field} {static} -serialVersionUID : long
	{method} +equals ( obj : Object ) : boolean
	{method} +hashCode () : int
	{method} +toString () : String
}


class org.rudi.facet.bpmn.entity.form.ProcessFormDefinitionEntity <<Entity>>  <<Table>>  {
 {TableName=process_form_definition}
--
	{field} +@Column("action_name") actionName : String
	{field} +@Column("process_definition_id") processDefinitionId : String
	{field} +@Column("revision") revision : Integer
	{field} {static} -serialVersionUID : long
	{field} +@Column("user_task_id") userTaskId : String
	{method} +equals ( obj : Object ) : boolean
	{method} +hashCode () : int
	{method} +toString () : String
}


class org.rudi.facet.bpmn.entity.form.SectionDefinitionEntity <<Entity>>  <<Table>>  {
 {TableName=section_definition}
--
	{field} +@Column("definition") definition : String
	{field} +@Column("help") help : String
	{field} +@Column("label") label : String
	{field} +@Column("name") name : String
	{field} {static} -serialVersionUID : long
	{method} +equals ( obj : Object ) : boolean
	{method} +hashCode () : int
	{method} +toString () : String
}


abstract class org.rudi.facet.bpmn.entity.workflow.AbstractAssetDescriptionEntity <<MappedSuperclass>>  {
	{field} +@Column("assignee") assignee : String
	{field} +@Column("creation_date") creationDate : java.time.LocalDateTime
	{field} +@Column("data") data : String
	{field} +@Column("description") description : String
	{field} +@Column("functional_status") functionalStatus : String
	{field} +@Column("initiator") initiator : String
	{field} +@Column("process_definition_key") processDefinitionKey : String
	{field} +@Column("process_definition_version") processDefinitionVersion : Integer
	{field} {static} -serialVersionUID : long
	{field} +@Column("status") status : org.rudi.bpmn.core.bean.Status
	{field} +@Column("updated_date") updatedDate : java.time.LocalDateTime
	{field} +@Column("updator") updator : String
	{method} +equals ( obj : Object ) : boolean
	{method} +hashCode () : int
	{method} +toString () : String
}


abstract class org.rudi.facet.bpmn.entity.workflow.AbstractAssetDescriptionEntity$AbstractAssetDescriptionEntityBuilder {
	{field} -assignee : String
	{field} -creationDate : java.time.LocalDateTime
	{field} -data : String
	{field} -description : String
	{field} -functionalStatus : String
	{field} -initiator : String
	{field} -processDefinitionKey : String
	{field} -processDefinitionVersion : Integer
	{field} -status : org.rudi.bpmn.core.bean.Status
	{field} -updatedDate : java.time.LocalDateTime
	{field} -updator : String
	{method} +assignee ( assignee : String ) : org.rudi.facet.bpmn.entity.workflow.AbstractAssetDescriptionEntity$AbstractAssetDescriptionEntityBuilder
	{method}  {abstract} +build () : org.rudi.facet.bpmn.entity.workflow.AbstractAssetDescriptionEntity
	{method} +creationDate ( creationDate : java.time.LocalDateTime ) : org.rudi.facet.bpmn.entity.workflow.AbstractAssetDescriptionEntity$AbstractAssetDescriptionEntityBuilder
	{method} +data ( data : String ) : org.rudi.facet.bpmn.entity.workflow.AbstractAssetDescriptionEntity$AbstractAssetDescriptionEntityBuilder
	{method} +description ( description : String ) : org.rudi.facet.bpmn.entity.workflow.AbstractAssetDescriptionEntity$AbstractAssetDescriptionEntityBuilder
	{method} +functionalStatus ( functionalStatus : String ) : org.rudi.facet.bpmn.entity.workflow.AbstractAssetDescriptionEntity$AbstractAssetDescriptionEntityBuilder
	{method} +initiator ( initiator : String ) : org.rudi.facet.bpmn.entity.workflow.AbstractAssetDescriptionEntity$AbstractAssetDescriptionEntityBuilder
	{method} +processDefinitionKey ( processDefinitionKey : String ) : org.rudi.facet.bpmn.entity.workflow.AbstractAssetDescriptionEntity$AbstractAssetDescriptionEntityBuilder
	{method} +processDefinitionVersion ( processDefinitionVersion : Integer ) : org.rudi.facet.bpmn.entity.workflow.AbstractAssetDescriptionEntity$AbstractAssetDescriptionEntityBuilder
	{method}  {abstract} #self () : org.rudi.facet.bpmn.entity.workflow.AbstractAssetDescriptionEntity$AbstractAssetDescriptionEntityBuilder
	{method} +status ( status : org.rudi.bpmn.core.bean.Status ) : org.rudi.facet.bpmn.entity.workflow.AbstractAssetDescriptionEntity$AbstractAssetDescriptionEntityBuilder
	{method} +toString () : String
	{method} +updatedDate ( updatedDate : java.time.LocalDateTime ) : org.rudi.facet.bpmn.entity.workflow.AbstractAssetDescriptionEntity$AbstractAssetDescriptionEntityBuilder
	{method} +updator ( updator : String ) : org.rudi.facet.bpmn.entity.workflow.AbstractAssetDescriptionEntity$AbstractAssetDescriptionEntityBuilder
}


interface org.rudi.facet.bpmn.entity.workflow.AssetDescriptionEntity {
	{method}  {abstract} +getAssignee () : String
	{method}  {abstract} +getCreationDate () : java.time.LocalDateTime
	{method}  {abstract} +getData () : String
	{method}  {abstract} +getDescription () : String
	{method}  {abstract} +getFunctionalStatus () : String
	{method}  {abstract} +getInitiator () : String
	{method}  {abstract} +getProcessDefinitionKey () : String
	{method}  {abstract} +getProcessDefinitionVersion () : Integer
	{method}  {abstract} +getStatus () : org.rudi.bpmn.core.bean.Status
	{method}  {abstract} +getUpdatedDate () : java.time.LocalDateTime
	{method}  {abstract} +getUpdator () : String
	{method}  {abstract} +setAssignee ( assignee : String ) : void
	{method}  {abstract} +setCreationDate ( creationDate : java.time.LocalDateTime ) : void
	{method}  {abstract} +setData ( data : String ) : void
	{method}  {abstract} +setDescription ( description : String ) : void
	{method}  {abstract} +setFunctionalStatus ( functionalStatus : String ) : void
	{method}  {abstract} +setInitiator ( initiator : String ) : void
	{method}  {abstract} +setProcessDefinitionKey ( businessKey : String ) : void
	{method}  {abstract} +setProcessDefinitionVersion ( version : Integer ) : void
	{method}  {abstract} +setStatus ( status : org.rudi.bpmn.core.bean.Status ) : void
	{method}  {abstract} +setUpdatedDate ( updatedDate : java.time.LocalDateTime ) : void
	{method}  {abstract} +setUpdator ( updator : String ) : void
}


class org.rudi.microservice.kalim.storage.entity.integration.IntegrationRequestEntity <<Entity>>  <<Table>>  {
 {TableName=integration_request}
 {TableSchema=kalim_data}
--
	{field} +@Column("file") file : String
	{field} +@Column("global_id") globalId : java.util.UUID
	{field} +@Column("integration_status") integrationStatus : org.rudi.microservice.kalim.core.bean.IntegrationStatus
	{field} +@Column("method") method : org.rudi.microservice.kalim.core.bean.Method
	{field} +@Column("node_provider_id") nodeProviderId : java.util.UUID
	{field} +@Column("progress_status") progressStatus : org.rudi.microservice.kalim.core.bean.ProgressStatus
	{field} +@Column("rapport_transmission_attempts") rapportTransmissionAttempts : int
	{field} +@Column("resource_title") resourceTitle : String
	{field} +@Column("send_request_date") sendRequestDate : java.time.LocalDateTime
	{field} {static} -serialVersionUID : long
	{field} +@Column("submission_date") submissionDate : java.time.LocalDateTime
	{field} +@Column("submitted_by_harvesting") submittedByHarvesting : boolean
	{field} +@Column("treatment_date") treatmentDate : java.time.LocalDateTime
	{field} +@Column("version") version : String
	{method}  {static} -$default$rapportTransmissionAttempts () : int
	{method}  {static} +builder () : org.rudi.microservice.kalim.storage.entity.integration.IntegrationRequestEntity$IntegrationRequestEntityBuilder
	{method} +equals ( obj : Object ) : boolean
	{method} +hashCode () : int
	{method} +toString () : String
}


abstract class org.rudi.microservice.kalim.storage.entity.integration.IntegrationRequestEntity$IntegrationRequestEntityBuilder {
	{field} -file : String
	{field} -globalId : java.util.UUID
	{field} -integrationStatus : org.rudi.microservice.kalim.core.bean.IntegrationStatus
	{field} -method : org.rudi.microservice.kalim.core.bean.Method
	{field} -nodeProviderId : java.util.UUID
	{field} -progressStatus : org.rudi.microservice.kalim.core.bean.ProgressStatus
	{field} -rapportTransmissionAttempts$set : boolean
	{field} -rapportTransmissionAttempts$value : int
	{field} -resourceTitle : String
	{field} -sendRequestDate : java.time.LocalDateTime
	{field} -submissionDate : java.time.LocalDateTime
	{field} -submittedByHarvesting : boolean
	{field} -treatmentDate : java.time.LocalDateTime
	{field} -version : String
	{method}  {abstract} +build () : org.rudi.microservice.kalim.storage.entity.integration.IntegrationRequestEntity
	{method} +errors ( errors : java.util.Set ) : org.rudi.microservice.kalim.storage.entity.integration.IntegrationRequestEntity$IntegrationRequestEntityBuilder
	{method} +file ( file : String ) : org.rudi.microservice.kalim.storage.entity.integration.IntegrationRequestEntity$IntegrationRequestEntityBuilder
	{method} +globalId ( globalId : java.util.UUID ) : org.rudi.microservice.kalim.storage.entity.integration.IntegrationRequestEntity$IntegrationRequestEntityBuilder
	{method} +integrationStatus ( integrationStatus : org.rudi.microservice.kalim.core.bean.IntegrationStatus ) : org.rudi.microservice.kalim.storage.entity.integration.IntegrationRequestEntity$IntegrationRequestEntityBuilder
	{method} +method ( method : org.rudi.microservice.kalim.core.bean.Method ) : org.rudi.microservice.kalim.storage.entity.integration.IntegrationRequestEntity$IntegrationRequestEntityBuilder
	{method} +nodeProviderId ( nodeProviderId : java.util.UUID ) : org.rudi.microservice.kalim.storage.entity.integration.IntegrationRequestEntity$IntegrationRequestEntityBuilder
	{method} +progressStatus ( progressStatus : org.rudi.microservice.kalim.core.bean.ProgressStatus ) : org.rudi.microservice.kalim.storage.entity.integration.IntegrationRequestEntity$IntegrationRequestEntityBuilder
	{method} +rapportTransmissionAttempts ( rapportTransmissionAttempts : int ) : org.rudi.microservice.kalim.storage.entity.integration.IntegrationRequestEntity$IntegrationRequestEntityBuilder
	{method} +resourceTitle ( resourceTitle : String ) : org.rudi.microservice.kalim.storage.entity.integration.IntegrationRequestEntity$IntegrationRequestEntityBuilder
	{method}  {abstract} #self () : org.rudi.microservice.kalim.storage.entity.integration.IntegrationRequestEntity$IntegrationRequestEntityBuilder
	{method} +sendRequestDate ( sendRequestDate : java.time.LocalDateTime ) : org.rudi.microservice.kalim.storage.entity.integration.IntegrationRequestEntity$IntegrationRequestEntityBuilder
	{method} +submissionDate ( submissionDate : java.time.LocalDateTime ) : org.rudi.microservice.kalim.storage.entity.integration.IntegrationRequestEntity$IntegrationRequestEntityBuilder
	{method} +submittedByHarvesting ( submittedByHarvesting : boolean ) : org.rudi.microservice.kalim.storage.entity.integration.IntegrationRequestEntity$IntegrationRequestEntityBuilder
	{method} +toString () : String
	{method} +treatmentDate ( treatmentDate : java.time.LocalDateTime ) : org.rudi.microservice.kalim.storage.entity.integration.IntegrationRequestEntity$IntegrationRequestEntityBuilder
	{method} +version ( version : String ) : org.rudi.microservice.kalim.storage.entity.integration.IntegrationRequestEntity$IntegrationRequestEntityBuilder
}


class org.rudi.microservice.kalim.storage.entity.integration.IntegrationRequestErrorEntity <<Entity>>  <<Table>>  {
 {TableName=integration_request_error}
 {TableSchema=kalim_data}
--
	{field} +@Column("code") code : String
	{field} +@Column("error_date") errorDate : java.time.LocalDateTime
	{field} +@Column("field_name") fieldName : String
	{field} +@Column("message") message : String
	{field} {static} -serialVersionUID : long
	{method} +equals ( obj : Object ) : boolean
	{method} +hashCode () : int
	{method} +toString () : String
}


class org.rudi.microservice.kalim.storage.entity.mimetype.MimeTypeEntity <<Entity>>  <<Table>>  {
 {TableName=mime_type}
 {TableSchema=kalim_data}
--
	{field} {static} +FIELD_CODE : String
	{field} {static} +FIELD_UUID : String
	{method} +toString () : String
}




org.rudi.common.storage.entity.AbstractLabelizedEntity --|>  org.rudi.common.storage.entity.AbstractLongIdEntity
org.rudi.common.storage.entity.AbstractStampedEntity --|>  org.rudi.common.storage.entity.AbstractLabelizedEntity
org.rudi.common.storage.entity.AbstractTranslationEntity --|>  org.rudi.common.storage.entity.AbstractLongIdEntity
org.rudi.facet.bpmn.entity.form.FormDefinitionEntity "1" o-- "0..*"  org.rudi.facet.bpmn.entity.form.FormSectionDefinitionEntity :  @OneToMany\nformSectionDefinitions
org.rudi.facet.bpmn.entity.form.FormDefinitionEntity --|>  org.rudi.common.storage.entity.AbstractLongIdEntity
org.rudi.facet.bpmn.entity.form.FormSectionDefinitionEntity -->  org.rudi.facet.bpmn.entity.form.SectionDefinitionEntity :  @ManyToOne\nsectionDefinition
org.rudi.facet.bpmn.entity.form.FormSectionDefinitionEntity --|>  org.rudi.common.storage.entity.AbstractLongIdEntity
org.rudi.facet.bpmn.entity.form.ProcessFormDefinitionEntity -->  org.rudi.facet.bpmn.entity.form.FormDefinitionEntity :  @ManyToOne\nformDefinition
org.rudi.facet.bpmn.entity.form.ProcessFormDefinitionEntity --|>  org.rudi.common.storage.entity.AbstractLongIdEntity
org.rudi.facet.bpmn.entity.form.SectionDefinitionEntity --|>  org.rudi.common.storage.entity.AbstractLongIdEntity
org.rudi.facet.bpmn.entity.workflow.AbstractAssetDescriptionEntity --|>  org.rudi.common.storage.entity.AbstractLongIdEntity
org.rudi.facet.bpmn.entity.workflow.AbstractAssetDescriptionEntity ..|>  org.rudi.facet.bpmn.entity.workflow.AssetDescriptionEntity
org.rudi.facet.bpmn.entity.workflow.AbstractAssetDescriptionEntity$AbstractAssetDescriptionEntityBuilder --|>  org.rudi.common.storage.entity.AbstractLongIdEntity$AbstractLongIdEntityBuilder
org.rudi.microservice.kalim.storage.entity.integration.IntegrationRequestEntity "1" o-- "0..*"  org.rudi.microservice.kalim.storage.entity.integration.IntegrationRequestErrorEntity :  @OneToMany\nerrors
org.rudi.microservice.kalim.storage.entity.integration.IntegrationRequestEntity --|>  org.rudi.common.storage.entity.AbstractLongIdEntity
org.rudi.microservice.kalim.storage.entity.integration.IntegrationRequestEntity$IntegrationRequestEntityBuilder "1" o-- "0..*"  org.rudi.microservice.kalim.storage.entity.integration.IntegrationRequestErrorEntity : errors
org.rudi.microservice.kalim.storage.entity.integration.IntegrationRequestEntity$IntegrationRequestEntityBuilder --|>  org.rudi.common.storage.entity.AbstractLongIdEntity$AbstractLongIdEntityBuilder
org.rudi.microservice.kalim.storage.entity.integration.IntegrationRequestErrorEntity --|>  org.rudi.common.storage.entity.AbstractLongIdEntity
org.rudi.microservice.kalim.storage.entity.mimetype.MimeTypeEntity --|>  org.rudi.common.storage.entity.AbstractStampedEntity

hide methods

@enduml